@@ -11,9 +11,9 @@ else
   UCHC08A = $(top_builddir)/sim/ucsim/hc08.src/shc08$(EXEEXT)
   UCHC08B = $(top_builddir)/bin/shc08$(EXEEXT)
 
-  UCHC08C = $(shell if [ -f $(UCHC08A) ]; then echo $(UCHC08A); else echo $(UCHC08B); fi)
+  EMU = $(WINE) $(shell if [ -f $(UCHC08A) ]; then echo $(UCHC08A); else echo $(UCHC08B); fi)
 
-  AS_HC08C = $(top_builddir)/bin/sdas6808$(EXEEXT)
+  AS = $(WINE) $(top_builddir)/bin/sdas6808$(EXEEXT)
 
 ifndef CROSSCOMPILING
   SDCCFLAGS += --nostdinc -I$(top_srcdir)
@@ -23,12 +23,6 @@ endif
 
 ifdef CROSSCOMPILING
   SDCCFLAGS += -I$(top_srcdir)
-
-  EMU = wine $(UCHC08C)
-  AS = wine $(AS_HC08C)
-else
-  EMU = $(UCHC08C)
-  AS = $(AS_HC08C)
 endif
 
 SDCCFLAGS += -mhc08 --less-pedantic --out-fmt-ihx -DREENTRANT=__reentrant
