@@ -11,9 +11,9 @@ else
   SZ80A = $(top_builddir)/sim/ucsim/z80.src/sz80$(EXEEXT)
   SZ80B = $(top_builddir)/bin/sz80$(EXEEXT)
 
-  UCZ80C = $(shell if [ -f $(SZ80A) ]; then echo $(SZ80A); else echo $(SZ80B); fi)
+  EMU = $(WINE) $(shell if [ -f $(SZ80A) ]; then echo $(SZ80A); else echo $(SZ80B); fi)
 
-  AS_Z80C = $(top_builddir)/bin/sdasz80$(EXEEXT)
+  AS = $(WINE) $(top_builddir)/bin/sdasz80$(EXEEXT)
 
 ifndef CROSSCOMPILING
   SDCCFLAGS += --nostdinc -I$(top_srcdir)
@@ -23,12 +23,6 @@ endif
 
 ifdef CROSSCOMPILING
   SDCCFLAGS += -I$(top_srcdir)
-
-  EMU = wine $(UCZ80C)
-  AS = wine $(AS_Z80C)
-else
-  EMU = $(UCZ80C)
-  AS = $(AS_Z80C)
 endif
 
 SDCCFLAGS += -mz80 --less-pedantic --profile -DREENTRANT=
